trunk/Archive/2d7ce5b625bd9151ee169c317b476f7e-50d9cfc8a1d350e7409e81e87c2653ba/output
+ g++-4.8 -std=c++11 -O2 -pthread main.cpp
main.cpp:2:4: error: expected unqualified-id before numeric constant
    1         struct bind_sequence : seq::true_sequence {
    ^
